# vreFS

./: README.md
NaaVRE-datalake-jupyterlab/: .copier-answers.yml  .gitignore  .prettierignore  LICENSE  README.md  RELEASE.md  install.json  package.json  pyproject.toml  tsconfig.json
NaaVRE-datalake-jupyterlab/.github/workflows/: build.yml  check-release.yml
NaaVRE-datalake-jupyterlab/.virtual_documents/: Untitled2.ipynb
NaaVRE-datalake-jupyterlab/NaaVRE_datalake_jupyterlab/: __init__.py
NaaVRE-datalake-jupyterlab/src/: icon.ts  index.tsx  service.ts  utils.ts
NaaVRE-datalake-jupyterlab/src/components/: AddStorageWizard.tsx  DataLakePanel.tsx  DatasetDetailPanel.tsx  FAIRChecklist.tsx  MetadataEditor.tsx
NaaVRE-datalake-jupyterlab/style/: index.css
NaaVRE-datalake-service/: .env  Dockerfile  docker-compose.yml  manage.py  requirements.txt  seed_discover.py  test.csv
NaaVRE-datalake-service/app/datasets/: fair.py  models.py  serializers.py  tasks.py  urls.py  views.py
NaaVRE-datalake-service/app/pids/: models.py  serializers.py  urls.py  views.py
NaaVRE-datalake-service/app/staging/: models.py  serializers.py  tasks.py  urls.py  views.py
NaaVRE-datalake-service/app/utils/: auth.py
NaaVRE-datalake-service/vreFS/: celery.py  settings.py  urls.py
local-communicator-stub/: pyproject.toml
local-communicator-stub/local_communicator_stub/: __init__.py  handlers.py
local-communicator-stub/local_communicator_stub/etc/jupyter/jupyter_server_config.d/: local_communicator_stub.json
vrefs-client/: pyproject.toml
vrefs-client/vrefs/: __init__.py
(+11 files in other folders)
