[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-communicator-stub"
version = "0.1.0"
description = "LOCAL DEV ONLY — stand-in for NaaVRE-communicator-jupyterlab"
requires-python = ">=3.8"
dependencies = ["jupyter_server>=2.0,<3"]

[tool.hatch.build.targets.wheel]
packages = ["local_communicator_stub"]

[tool.hatch.build.targets.wheel.shared-data]
"local_communicator_stub/etc" = "etc/jupyter"